changes are done

--- a/carrer.html
+++ b/carrer.html
@@ -264,9 +264,9 @@
 						</div>
 						<div class="col-md-4 col-sm-4 col-xs-12 address">
 						<div class="footer-title mobile-footer">Corporate Office</div>
-						<p class="padding-left-15 mobile-footer"><strong>Datawind Technologies</strong></p>
-						<p class="padding-left-15 mobile-footer">City Center, 14, 138/ I, Hinjewadi Phase 1 Rd, Hinjewadi Rajiv Gandhi Infotech Park,<br> Pune,  Maharashtra(India) – 411057.</p> 
-						<p class="padding-left-15 mobile-footer"><strong>Phone:</strong> +91-9049780652<br>
+						<p class="padding-left-15 mobile-footer"><strong>DGCT Technology</strong></p>
+						<p class="padding-left-15 mobile-footer">First Floor, Omkar Nagar Rd, above MedPlus Pharmacy, Swaraj Nagar, Omkar Nagar, Nagpur, Maharashtra 440027</p> 
+						<p class="padding-left-15 mobile-footer"><strong>Phone:</strong> +91-9665516609<br>
 							<!--<strong>Fax:</strong> +91-20-66756888<br />
 							<strong>E-mail:</strong> <a href="mailto:info@vjcs.com">info@vjcs.com</a>-->
 						</p>
@@ -331,7 +331,7 @@
 				</div>
 				<div class="row no-margin footer-bottom">
 					<div class="container">
-						<div class="copyright">Copyright  Datawind Technologies All Rights Reserved</div>
+						<div class="copyright">Copyright  DGCT Technology All Rights Reserved</div>
 						<div class="ojaswi">
 							<a href="http://www.webmirchi.com/" target="_blank">Web Design Company</a> - Webmirchi
 						</div>
