--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<title>Datawind Technologies</title>
+	<title>DGCT Technology</title>
 	<meta name="description"
 		content="Datawind Technologies India, provides engineering and product design services.  It is reseller for Stratasys 3D printers in India. The company also provides CAD / CAE / PLM solutions from PTC, Altair, MathWorks and ESI.">
 	<meta name="keywords"
@@ -251,7 +251,7 @@
 									<!--<li>Empower your digital transformation with analytics, machine learning, and big data.</li>-->
 									<li>The system lets users easily analyse their data information in one fluid,
 										unified user interface. </li>
-									<li>Datawind designs comprehensive analytics ecosystems with predictive intelligence
+									<li>DGCT designs comprehensive analytics ecosystems with predictive intelligence
 										you can utilize to make decisions that will drive your business to the next
 										level.</li>
 								</ul>
@@ -495,7 +495,7 @@
 					<div class="col-md-4 col-sm-4 col-xs-12 address">
 						<div class="footer-title mobile-footer">Corporate Office</div>
 						<p class="padding-left-15 mobile-footer"><strong>DGTC Technology </strong></p>
-						<p class="padding-left-15 mobile-footer">Lane103 sadbhavna nagar omkar nagar</p>
+						<p class="padding-left-15 mobile-footer">First Floor, Omkar Nagar Rd, above MedPlus Pharmacy, Swaraj Nagar, Omkar Nagar, Nagpur, Maharashtra 440027</p>
 						<p class="padding-left-15 mobile-footer"><strong>Phone:</strong> +91-9665516609<br />
 							<!--<strong>Fax:</strong> +91-20-66756888<br />-->
 							<!--<strong>E-mail:</strong> <a href="mailto:info@vjcs.com"></a>-->
