--- a/terms_of_use.html
+++ b/terms_of_use.html
@@ -266,7 +266,7 @@
 						<p class="padding-left-15 mobile-footer"><strong>VJ Coresoft Pvt. Ltd.</strong></p>
 						<p class="padding-left-15 mobile-footer">Ground Floor, IT-6 Building, Qubix Business Park, Rajiv Gandhi Infotech Park, Phase-1, Hinjewadi,<br /> Pune, Maharashtra(India)
 							– 411057.</p>
-						<p class="padding-left-15 mobile-footer"><strong>Phone:</strong> +91-20-66756800 / +91-20-66756801<br />
+						<p class="padding-left-15 mobile-footer"><strong>Phone:</strong> +91-9665516609 / +91-20-66756801<br />
 							<strong>Fax:</strong> +91-20-66756888<br />
 							<strong>E-mail:</strong> <a href="mailto:info@vjcs.com">info@vjcs.com</a>
 						</p>
