--- a/Business_Analytics.html
+++ b/Business_Analytics.html
@@ -17,7 +17,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Business Analytics - Datawind Technologies</title>
+		<title>Business Analytics - DGCT Technology</title>
 		<meta name="description" content="DesignTech is an India based company that offers CAD / CAE / PLM solutions and additive manufacturing technologies. The company has an alliance with PTC, Altair, Stratasys and MathWorks for their various products.">
 		<meta name="keywords" content="about us, about designtech sys, about company">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -153,8 +153,12 @@
 						<h1 class="heading margin-top-0">Business Analytics</h1>
 						<div class="heading-border"></div>
 						<div class="content">
-							<p>We take it a step forward and delves into digital and social media analytics to provide insights across marketing channels.The major service areas are in Data Strategy Consulting, Data Engineering Services, and Industry Point Solutions.</p>
-						    <p>We are solving business problems using data analysis, statistical models, and other quantitative methods. We’ll help you reinvent and deploy sales strategies, execute digital transformations, and drive profitable growth. Our major focuses on the implementation of actionable steps. </p>
+							<p>We take it a step forward and delves into digital and social media analytics to provide insights across marketing
+								 channels.The major service areas are in Data Strategy Consulting, Data Engineering Services, 
+								 and Industry Point Solutions.</p>
+						    <p>We are solving business problems using data analysis, statistical models, and other quantitative methods.
+								 We’ll help you reinvent and deploy sales strategies, execute digital transformations, and drive profitable
+								  growth. Our major focuses on the implementation of actionable steps. </p>
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-6 col-12">
@@ -215,9 +219,9 @@
 						</div>
 						<div class="col-md-4 col-sm-4 col-xs-12 address">
 						<div class="footer-title mobile-footer">Corporate Office</div>
-						<p class="padding-left-15 mobile-footer"><strong>Datawind Technologies</strong></p>
-						<p class="padding-left-15 mobile-footer">City Center, 14, 138/ I, Hinjewadi Phase 1 Rd, Hinjewadi Rajiv Gandhi Infotech Park,<br /> Pune,  Maharashtra(India) – 411057.</p> 
-						<p class="padding-left-15 mobile-footer"><strong>Phone:</strong> +91-9049780652<br />
+						<p class="padding-left-15 mobile-footer"><strong>DGCT Technology</strong></p>
+						<p class="padding-left-15 mobile-footer"> First Floor, Omkar Nagar Rd, above MedPlus Pharmacy, Swaraj Nagar, Omkar Nagar, Nagpur, Maharashtra 440027<br /> </p> 
+						<p class="padding-left-15 mobile-footer"><strong>Phone:</strong> +91-9665516609<br />
 							<!--<strong>Fax:</strong> +91-20-66756888<br />
 							<strong>E-mail:</strong> <a href="mailto:info@vjcs.com">info@vjcs.com</a>-->
 						</p>
@@ -297,7 +301,7 @@
 				</div>
 				<div class="row no-margin footer-bottom">
 					<div class="container">
-						<div class="copyright">Copyright  Datawind Technologies All Rights Reserved</div>
+						<div class="copyright">Copyright  DGCT Technology All Rights Reserved</div>
 						<div class="ojaswi">
 							<a href="http://www.webmirchi.com/" target="_blank">Web Design Company</a> - Webmirchi
 						</div>
