--- a/contact-us.html
+++ b/contact-us.html
@@ -18,7 +18,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>contact-us - Datawind Technologies</title>
+	<title>contact-us - DGCT Technology</title>
 	<meta name="description"
 		content="Our corporate address, branch addresses, e-mail addresses, phone and fax addresses.">
 	<meta name="keywords" content="designtech contact">
@@ -334,12 +334,11 @@
 						<div class="sidebar">
 							<h2>Corporate Office</h2>
 							<div class="padding-10">
-								<p><strong>Datawind Technologies</strong></p>
-								<p>City Center,14,138/ I, Hinjewadi Phase 1 Rd,
-									 Hinjewadi Rajiv Gandhi Infotech Park, Pune, Maharashtra 411057
+								<p><strong>DGCT Technology</strong></p>
+								<p>First Floor, Omkar Nagar Rd, above MedPlus Pharmacy, Swaraj Nagar, Omkar Nagar, Nagpur, Maharashtra 440027
 								</p>
 								
-								<p><a href="tel:+91-9049780652">Phone: +91-9049780652</a></p>
+								<p><a href="tel:+91-9049780652">Phone: +91-9665516609</a></p>
 								
 								<!--<p>Fax: +91-20-66756888</p>
 								<p>E-mail: info@vjcs.com</p>-->
@@ -436,9 +435,9 @@
 					</div>
 					<div class="col-md-4 col-sm-4 col-xs-12 address">
 						<div class="footer-title mobile-footer">Corporate Office</div>
-						<p class="padding-left-15 mobile-footer"><strong>Datawind Technologies</strong></p>
-						<p class="padding-left-15 mobile-footer">City Center, 14, 138/ I, Hinjewadi Phase 1 Rd, Hinjewadi Rajiv Gandhi Infotech Park,<br /> Pune,  Maharashtra(India) – 411057.</p> 
-						<p class="padding-left-15 mobile-footer"><strong>Phone:</strong> +91-9049780652<br />
+						<p class="padding-left-15 mobile-footer"><strong>DGCT Technology</strong></p>
+						<p class="padding-left-15 mobile-footer">First Floor, Omkar Nagar Rd, above MedPlus Pharmacy, Swaraj Nagar, Omkar Nagar, Nagpur, Maharashtra 440027</p> 
+						<p class="padding-left-15 mobile-footer"><strong>Phone:</strong> +91-9665516609<br />
 							<!--<strong>Fax:</strong> +91-20-66756888<br />
 							<strong>E-mail:</strong> <a href="mailto:info@vjcs.com">info@vjcs.com</a>-->
 						</p>
@@ -519,7 +518,7 @@
 			<div class="row no-margin footer-bottom">
 				<div class="container">
 					<div class="copyright">
-Copyright  Datawind Technologies All Rights Reserved
+Copyright  DGCT Technology All Rights Reserved
                     </div>
 					<div class="ojaswi">
 						<a href="http://www.webmirchi.com/" target="_blank">Web Design Company</a> - Webmirchi
