--- a/index.html
+++ b/index.html
@@ -71,7 +71,33 @@
 
 		</script>
 		<div class="row no-margin width-1600">
-			<div id="navbar">
+			<nav>
+				<div class="brand-name">
+					<img src="./images/logo.png">
+				</div>
+				<ul id="sideMenu">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about-us.html">About Us</a></li>
+					<li><a href="mobileapp.html">App development ▼</a>
+						<ul class="tour-dropdown">
+							<li><a href="iosapp.html">IOS App</a></li>
+							<li><a href="mobileapp.html">Mobile App</a></li>
+						</ul>
+					</li>
+					<li><a href="it_consulting.html">It Consulting</a></li>
+					<li><a href="Business_Analytics.html">Business Analytics</a></li>
+					<li><a href="./login.html">Cloud Management</a></li>
+					<li><a href="Database-Development.html">Database Development</a></li>
+					<li><a href="SaaS.html">Saas</a></li>
+					<li><a href="carrer.html">Careers</a></li>
+					<li><a href="contact-us.html">Contact us</a></li>
+
+
+					<i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
+				</ul>
+				<i class="fa-solid fa-bars" onclick="openMenu()"></i>
+			</nav>
+			<!--<div id="navbar">
 				<nav class="navbar navbar-default" role="navigation">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -91,9 +117,9 @@
 					<div class="collapse navbar-collapse" id="navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="about-us.html">About Us</a></li>
+							<li><a href="about-us.html">About Us</a></li>-->
 
-							<!--<li class="dropdown">
+			<!--<li class="dropdown">
 								<a href="CAx-Software-Development.html" class="dropdown-toggle"
 									data-toggle="dropdown">CA<span style="text-transform: lowercase;">x</span> Software
 									Services <span class="caret"></span></a>
@@ -113,25 +139,25 @@
 											Software QA & Testing </a></a></li>
 								</ul>
 							</li>-->
-<li><a href="#">App development ▼ </a>
-								<ul class="tour-dropdown">
-								  <li><a href="./mobileapp.html">Mobile app</a></li>
-								  <li><a href="./iosapp.html">IOS app</a></li>
-								</ul>
-							  </li>
+			<!--<li><a href="#">App development ▼ </a>
+				<ul class="tour-dropdown">
+					<li><a href="./mobileapp.html">Mobile app</a></li>
+					<li><a href="./iosapp.html">IOS app</a></li>
+				</ul>
+			</li>
 
-							<li><a href="it_consulting.html">It Consulting</a></li>
-							<li><a href="Business_Analytics.html">Business Analytics</a></li>
-							<li><a href="Cloud-Management.html">Cloud Management</a></li>
-							<li><a href="Database-Development.html">Database Development</a></li>
-							<li><a href="SaaS.html"> SaaS</a></li>
-							<li><a href="carrer.html">Careers</a></li>
-							<li><a href="contact-us.html">Contact us</a></li>
-						</ul>
-						
-					</div><!-- /.navbar-collapse -->
-				</nav>
-			</div>
+			<li><a href="it_consulting.html">It Consulting</a></li>
+			<li><a href="Business_Analytics.html">Business Analytics</a></li>
+			<li><a href="Cloud-Management.html">Cloud Management</a></li>
+			<li><a href="Database-Development.html">Database Development</a></li>
+			<li><a href="SaaS.html"> SaaS</a></li>
+			<li><a href="carrer.html">Careers</a></li>
+			<li><a href="contact-us.html">Contact us</a></li>
+			</ul>
+
+		</div> /.navbar-collapse 
+		</nav>-->
+		</div>
 		</div>
 	</header>
 	<section class="main-slider width-1600">
@@ -312,7 +338,7 @@
 				<div class="col-lg-4 col-sm-4 col-12">
 					<div class="counter">
 						<i class="fa fa-thumbs-o-up fa-4x"></i>
-						<h2 class="timer count-title count-number sppb-animated-number " data-to="90" data-speed="1500">
+						<h2 class="timer count-title count-number sppb-animated-number " data-to="100" data-speed="1500">
 						</h2>
 						<span style="color:#32779c;font-size:44px;display:inline-block;font-weight:700;">+</span>
 						<p class="count-text sppb-animated-number-title  ">Happy clients</p>
@@ -434,7 +460,7 @@
 							<p class="yellow">Future Life Experience Training / Support</p>
 						</div>
 					</div>
-					<!--  <div class="MS-controls">
+					 <div class="MS-controls">
                         <button class="MS-left"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
                         <button class="MS-right"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
                     </div> -->
@@ -495,7 +521,8 @@
 					<div class="col-md-4 col-sm-4 col-xs-12 address">
 						<div class="footer-title mobile-footer">Corporate Office</div>
 						<p class="padding-left-15 mobile-footer"><strong>DGTC Technology </strong></p>
-						<p class="padding-left-15 mobile-footer">First Floor, Omkar Nagar Rd, above MedPlus Pharmacy, Swaraj Nagar, Omkar Nagar, Nagpur, Maharashtra 440027</p>
+						<p class="padding-left-15 mobile-footer">First Floor, Omkar Nagar Rd, above MedPlus Pharmacy,
+							Swaraj Nagar, Omkar Nagar, Nagpur, Maharashtra 440027</p>
 						<p class="padding-left-15 mobile-footer"><strong>Phone:</strong> +91-9665516609<br />
 							<!--<strong>Fax:</strong> +91-20-66756888<br />-->
 							<!--<strong>E-mail:</strong> <a href="mailto:info@vjcs.com"></a>-->
