--- a/iosapp.html
+++ b/iosapp.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css"/>
 </head>
 <body>
+    <nav>
+        <div class="brand-name">
+            <img src="./images/logo.png">
+        </div>
+        <ul id="sideMenu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="mobileapp.html">App development ▼</a>
+                <ul class="tour-dropdown">
+                    <li><a href="iosapp.html">IOS App</a></li>
+                    <li><a href="./beaches.html">Beaches</a></li>
+                </ul>
+            </li>
+            <li><a href="it_consulting.html">It Consulting</a></li>
+            <li><a href="Business_Analytics.html">Business Analytics</a></li>
+            <li><a href="./login.html">Cloud Management</a></li>
+            <li><a href="Database-Development.html">Database Development</a></li>
+            <li><a href="SaaS.html">Saas</a></li>
+            <li><a href="carrer.html">Careers</a></li>
+            <li><a href="contact-us.html">Contact us</a></li>
+
+
+            <i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
+        </ul>
+        <i class="fa-solid fa-bars" onclick="openMenu()"></i>
+    </nav>
     <h1> IOS APP</h1>
 </body>
 </html>
