--- a/about-us.html
+++ b/about-us.html
@@ -78,7 +78,33 @@
 			//popover
 		</script>
 	<div class="row no-margin width-1600">
-		<div id="navbar">
+		<nav>
+			<div class="brand-name">
+				<img src="./images/logo.png">
+			</div>
+			<ul id="sideMenu">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about-us.html">About Us</a></li>
+				<li><a href="mobileapp.html">App development ▼</a>
+					<ul class="tour-dropdown">
+						<li><a href="iosapp.html">IOS App</a></li>
+						<li><a href="./beaches.html">Beaches</a></li>
+					</ul>
+				</li>
+				<li><a href="it_consulting.html">It Consulting</a></li>
+				<li><a href="Business_Analytics.html">Business Analytics</a></li>
+				<li><a href="./login.html">Cloud Management</a></li>
+				<li><a href="Database-Development.html">Database Development</a></li>
+				<li><a href="SaaS.html">Saas</a></li>
+				<li><a href="carrer.html">Careers</a></li>
+				<li><a href="contact-us.html">Contact us</a></li>
+
+
+				<i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
+			</ul>
+			<i class="fa-solid fa-bars" onclick="openMenu()"></i>
+		</nav>
+		<!--<div id="navbar">
 			<nav class="navbar navbar-default" role="navigation">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -99,7 +125,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="about-us.html">About Us</a></li>
 
-							<!--<li class="dropdown">
+							<li class="dropdown">
 								<a href="CAx-Software-Development.html" class="dropdown-toggle"
 									data-toggle="dropdown">CA<span style="text-transform: lowercase;">x</span> Software
 									Services <span class="caret"></span></a>
@@ -118,7 +144,7 @@
 												style="text-transform: lowercase;">x</span>
 											Software QA & Testing </a></a></li>
 								</ul>
-							</li>-->
+							</li>
 							<li><a href="it_consulting.html">It Consulting</a></li>
 							<li><a href="Business_Analytics.html">Business Analytics</a></li>
 							<li><a href="Cloud-Management.html">Cloud Management</a></li>
@@ -129,8 +155,8 @@
 
 
 						</ul>
-				</div><!-- /.navbar-collapse -->
-			</nav>
+				</div>
+			</nav>-->
 		</div>
 	</div>
 </header>		
