--- a/it_consulting.html
+++ b/it_consulting.html
@@ -78,59 +78,32 @@
 			//popover
 		</script>
 	<div class="row no-margin width-1600">
-		<div id="navbar">
-			<nav class="navbar navbar-default" role="navigation">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse"
-						data-target="#navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.png" class="logo" alt="DesignTech-Technology for designing the future"
-							title="DesignTech-Technology for designing the future">
-					</a>
-				</div>
-
-				<div class="collapse navbar-collapse" id="navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-right">
-							<li ><a href="index.html">Home</a></li>
-							<li><a href="about-us.html">About Us</a></li>
-
-							<!--<li class="dropdown">
-								<a href="CAx-Software-Development.html" class="dropdown-toggle"
-									data-toggle="dropdown">CA<span style="text-transform: lowercase;">x</span> Software
-									Services <span class="caret"></span></a>
-
-								<ul class="dropdown-menu">
-									<li class="dropdown dropdown-submenu"><a
-											href="CAx-Software-Development.html">CA<span
-												style="text-transform: lowercase;">x</span>
-											Software Development</a></a>
-										<ul class="dropdown-menu">
-											<li><a href="CAD&CAM-Development.html">CAD/CAM Development</a></li>
-											<li><a href="CAE-Development.html">CAE-Development</a></li>
-										</ul>
-									</li>
-									<li><a href="CAx-Software-QA&Testing.html">CA<span
-												style="text-transform: lowercase;">x</span>
-											Software QA & Testing </a></a></li>
-								</ul>
-							</li>-->
-							<li class="active"><a href="it_consulting.html">It Consulting</a></li>
-							<li><a href="Business_Analytics.html">Business Analytics</a></li>
-							<li><a href="Cloud-Management.html">Cloud Management</a></li>
-							<li><a href="Database-Development.html">Database Development</a></li>
-							<li><a href="SaaS.html"> SaaS</a></li>
-							<li><a href="carrer.html">Careers</a></li>
-							<li><a href="contact-us.html">Contact us</a></li>
+		<nav>
+			<div class="brand-name">
+				<img src="./images/logo.png">
+			</div>
+			<ul id="sideMenu">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about-us.html">About Us</a></li>
+				<li><a href="mobileapp.html">App development ▼</a>
+					<ul class="tour-dropdown">
+						<li><a href="iosapp.html">IOS App</a></li>
+						<li><a href="./beaches.html">Beaches</a></li>
+					</ul>
+				</li>
+				<li><a href="it_consulting.html">It Consulting</a></li>
+				<li><a href="Business_Analytics.html">Business Analytics</a></li>
+				<li><a href="./login.html">Cloud Management</a></li>
+				<li><a href="Database-Development.html">Database Development</a></li>
+				<li><a href="SaaS.html">Saas</a></li>
+				<li><a href="carrer.html">Careers</a></li>
+				<li><a href="contact-us.html">Contact us</a></li>
 
 
-						</ul>
-				</div><!-- /.navbar-collapse -->
-			</nav>
+				<i class="fa-solid fa-xmark" onclick="closeMenu()"></i>
+			</ul>
+			<i class="fa-solid fa-bars" onclick="openMenu()"></i>
+		</nav>
 		</div>
 	</div>
 </header>		
